package com.divya.systemdesign.creational.factorymethod;

/*
 * Notification Interface
 * Every notification service
 * must implement this method.
 */
public interface Notification {
    void send();
}
