package com.divya.systemdesign.creational.factorymethod;

public class PushNotification implements Notification{
    @Override
    public void send(){
        System.out.println("Push notification sent");
    }
}
